fix: fixed margins on banner to match the content below, eliminating gap.

--- a/css/main.css
+++ b/css/main.css
@@ -13,3 +13,6 @@
     width: 350px;
     height: 200px;
 }
+.iconimg img{
+    float: left;
+}
